Separate vendor scripts

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <textarea placeholder="Type &quot;hello gdg&quot; and press enter" disabled="true"></textarea>
       <p>Test case</p>
     </section>
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/brain-0.6.3.min.js"></script>
+    <script type="text/javascript" src="js/3rd-party/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/3rd-party/brain-0.6.3.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
