Rename dom elements

--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <section id="user1">
+    <section class="user" id="user1">
       <img src="img/1.png">
-      <textarea placeholder="Type &quot;hello gdg&quot; and press enter" autofocus></textarea>
-      <p>Not trained</p>
+      <textarea class="train-data" placeholder="Type &quot;hello gdg&quot; and press enter" autofocus></textarea>
+      <p class="status">Not trained</p>
     </section>
-    <section id="user2">
+    <section class="user" id="user2">
       <img src="img/2.png">
-      <textarea placeholder="Type &quot;hello gdg&quot; and press enter" disabled="true"></textarea>
-      <p>Not trained</p>
+      <textarea class="train-data" placeholder="Type &quot;hello gdg&quot; and press enter" disabled="true"></textarea>
+      <p class="status">Not trained</p>
     </section>
-    <section id="user3">
+    <section class="user" id="user3">
       <img src="img/3.png">
-      <textarea placeholder="Type &quot;hello gdg&quot; and press enter" disabled="true"></textarea>
-      <p>Not trained</p>
+      <textarea class="train-data" placeholder="Type &quot;hello gdg&quot; and press enter" disabled="true"></textarea>
+      <p class="status">Not trained</p>
     </section>
-    <section id="userx">
+    <section class="user" id="userx">
       <img src="img/x.png">
-      <textarea placeholder="Type &quot;hello gdg&quot; and press enter" disabled="true"></textarea>
-      <p>Test case</p>
+      <textarea class="train-data" placeholder="Type &quot;hello gdg&quot; and press enter" disabled="true"></textarea>
+      <p class="status">Test case</p>
     </section>
     <script type="text/javascript" src="js/3rd-party/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/3rd-party/brain-0.6.3.min.js"></script>
