Change train data string

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   <body>
     <section class="user" id="user1">
       <img src="img/1.png">
-      <textarea class="train-data" placeholder="Type &quot;hello gdg&quot; and press enter" autofocus></textarea>
+      <textarea class="train-data" placeholder="Type &quot;hello world&quot; and press enter" autofocus></textarea>
       <p class="status">Not trained</p>
     </section>
     <section class="user" id="user2">
       <img src="img/2.png">
-      <textarea class="train-data" placeholder="Type &quot;hello gdg&quot; and press enter" disabled="true"></textarea>
+      <textarea class="train-data" placeholder="Type &quot;hello world&quot; and press enter" disabled="true"></textarea>
       <p class="status">Not trained</p>
     </section>
     <section class="user" id="user3">
       <img src="img/3.png">
-      <textarea class="train-data" placeholder="Type &quot;hello gdg&quot; and press enter" disabled="true"></textarea>
+      <textarea class="train-data" placeholder="Type &quot;hello world&quot; and press enter" disabled="true"></textarea>
       <p class="status">Not trained</p>
     </section>
     <section class="user" id="userx">
       <img src="img/x.png">
-      <textarea class="train-data" placeholder="Type &quot;hello gdg&quot; and press enter" disabled="true"></textarea>
+      <textarea class="train-data" placeholder="Type &quot;hello world&quot; and press enter" disabled="true"></textarea>
       <p class="status">Test case</p>
     </section>
     <script type="text/javascript" src="js/3rd-party/jquery-3.2.1.min.js"></script>
