Update jquery to v3.3.1 slim

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <textarea class="train-data" disabled="true"></textarea>
       <p class="status">Test case</p>
     </section>
-    <script type="text/javascript" src="js/3rd-party/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/3rd-party/jquery-3.3.1.slim.min.js"></script>
     <script type="text/javascript" src="js/3rd-party/brain-0.6.3.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
